--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodeboilerplate",
+  "name": "shoppingList-Cesar-Logan",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "start": "node src/practice.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
