--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "knex": "^0.21.1",
     "mocha": "^7.1.2",
     "morgan": "^1.10.0",
+    "pg": "^8.0.3",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
